<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MealDetailActivity">

    <TextView
        android:id="@+id/tvMealName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/meal_detail_title_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivMealImage"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cd_meal_image"
        app:layout_constraintTop_toBottomOf="@+id/tvMealName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/iBtnFavourite"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:tint="@color/black"
        android:contentDescription="@string/cd_favorite_button"
        app:layout_constraintTop_toBottomOf="@+id/ivMealImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/svInstructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/iBtnFavourite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:text="@string/meal_detail_instructions_placeholder" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

